ChinesePyPlus/ChinesePyPlusParser.py
# Generated from ChinesePyPlus.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChinesePyPlusParser ( Parser ):

    grammarFileName = "ChinesePyPlus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'++'", "'<-'", 
                     "'>'", "'<'", "'='", "'>='", "'<='", "'/='", "':'", 
                     "'('", "')'", "'['", "']'", "','", "'{'", "'}'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':)'" ]

    symbolicNames = [ "<INVALID>", "TKN_END_LINE", "TKN_NUMBER", "TKN_STRING", 
                      "TKN_BOOL", "TKN_LIST", "TKN_IF", "TKN_ELSE", "TKN_ELIF", 
                      "TKN_FOR", "TKN_FROM", "TKN_TO", "TKN_WHILE", "TKN_NOT", 
                      "TKN_AND", "TKN_OR", "TKN_FUNCTION", "TKN_RETURN", 
                      "TKN_PRINT", "TKN_TRUE", "TKN_FALSE", "TKN_END", "TKN_BREAK", 
                      "TKN_CONTINUE", "TKN_PLUS", "TKN_MINUS", "TKN_MUL", 
                      "TKN_DIV", "TKN_POW", "TKN_CONCAT", "TKN_ASSIGN", 
                      "TKN_G", "TKN_L", "TKN_EQ", "TKN_GEQ", "TKN_LEQ", 
                      "TKN_NEQ", "TKN_DOTS", "TKN_LBRACKET", "TKN_RBRACKET", 
                      "TKN_LSQUARE", "TKN_RSQUARE", "TKN_COMMA", "TKN_LFUNBRACKET", 
                      "TKN_RFUNBRACKET", "TKN_COMMENT", "TKN_NUMBER_VAL", 
                      "TKN_STRING_VAL", "TKN_VAR_ID", "TKN_WHITESPACE", 
                      "TKN_END_OF_FILE" ]

    RULE_program = 0
    RULE_code = 1
    RULE_var_type = 2
    RULE_varDeclaration = 3
    RULE_varAssignment = 4
    RULE_functionDeclaration = 5
    RULE_functionCall = 6
    RULE_expression = 7
    RULE_value = 8
    RULE_stringExpression = 9
    RULE_booleanExpression = 10
    RULE_arithmeticExpression = 11
    RULE_printExpression = 12
    RULE_forLoopExpression = 13
    RULE_whileLoopExpression = 14
    RULE_conditionalExpression = 15
    RULE_elifExpression = 16
    RULE_elseExpression = 17
    RULE_listExpression = 18
    RULE_listValue = 19
    RULE_valueList = 20
    RULE_fullValueList = 21
    RULE_argList = 22
    RULE_fullArgList = 23
    RULE_loopCode = 24

    ruleNames =  [ "program", "code", "var_type", "varDeclaration", "varAssignment", 
                   "functionDeclaration", "functionCall", "expression", 
                   "value", "stringExpression", "booleanExpression", "arithmeticExpression", 
                   "printExpression", "forLoopExpression", "whileLoopExpression", 
                   "conditionalExpression", "elifExpression", "elseExpression", 
                   "listExpression", "listValue", "valueList", "fullValueList", 
                   "argList", "fullArgList", "loopCode" ]

    EOF = Token.EOF
    TKN_END_LINE=1
    TKN_NUMBER=2
    TKN_STRING=3
    TKN_BOOL=4
    TKN_LIST=5
    TKN_IF=6
    TKN_ELSE=7
    TKN_ELIF=8
    TKN_FOR=9
    TKN_FROM=10
    TKN_TO=11
    TKN_WHILE=12
    TKN_NOT=13
    TKN_AND=14
    TKN_OR=15
    TKN_FUNCTION=16
    TKN_RETURN=17
    TKN_PRINT=18
    TKN_TRUE=19
    TKN_FALSE=20
    TKN_END=21
    TKN_BREAK=22
    TKN_CONTINUE=23
    TKN_PLUS=24
    TKN_MINUS=25
    TKN_MUL=26
    TKN_DIV=27
    TKN_POW=28
    TKN_CONCAT=29
    TKN_ASSIGN=30
    TKN_G=31
    TKN_L=32
    TKN_EQ=33
    TKN_GEQ=34
    TKN_LEQ=35
    TKN_NEQ=36
    TKN_DOTS=37
    TKN_LBRACKET=38
    TKN_RBRACKET=39
    TKN_LSQUARE=40
    TKN_RSQUARE=41
    TKN_COMMA=42
    TKN_LFUNBRACKET=43
    TKN_RFUNBRACKET=44
    TKN_COMMENT=45
    TKN_NUMBER_VAL=46
    TKN_STRING_VAL=47
    TKN_VAR_ID=48
    TKN_WHITESPACE=49
    TKN_END_OF_FILE=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.CodeContext,0)


        def TKN_END_OF_FILE(self):
            return self.getToken(ChinesePyPlusParser.TKN_END_OF_FILE, 0)

        def EOF(self):
            return self.getToken(ChinesePyPlusParser.EOF, 0)

        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ChinesePyPlusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.code()
            self.state = 51
            self.match(ChinesePyPlusParser.TKN_END_OF_FILE)
            self.state = 52
            self.match(ChinesePyPlusParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ExpressionContext,0)


        def TKN_END_LINE(self):
            return self.getToken(ChinesePyPlusParser.TKN_END_LINE, 0)

        def code(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.CodeContext,0)


        def TKN_COMMENT(self):
            return self.getToken(ChinesePyPlusParser.TKN_COMMENT, 0)

        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)




    def code(self):

        localctx = ChinesePyPlusParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.expression()
                self.state = 55
                self.match(ChinesePyPlusParser.TKN_END_LINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.expression()
                self.state = 58
                self.match(ChinesePyPlusParser.TKN_END_LINE)
                self.state = 59
                self.code()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(ChinesePyPlusParser.TKN_COMMENT)
                self.state = 62
                self.code()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_NUMBER(self):
            return self.getToken(ChinesePyPlusParser.TKN_NUMBER, 0)

        def TKN_STRING(self):
            return self.getToken(ChinesePyPlusParser.TKN_STRING, 0)

        def TKN_BOOL(self):
            return self.getToken(ChinesePyPlusParser.TKN_BOOL, 0)

        def TKN_LIST(self):
            return self.getToken(ChinesePyPlusParser.TKN_LIST, 0)

        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = ChinesePyPlusParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.Var_typeContext,0)


        def TKN_VAR_ID(self):
            return self.getToken(ChinesePyPlusParser.TKN_VAR_ID, 0)

        def TKN_ASSIGN(self):
            return self.getToken(ChinesePyPlusParser.TKN_ASSIGN, 0)

        def value(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ValueContext,0)


        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = ChinesePyPlusParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.var_type()
            self.state = 68
            self.match(ChinesePyPlusParser.TKN_VAR_ID)
            self.state = 69
            self.match(ChinesePyPlusParser.TKN_ASSIGN)
            self.state = 70
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_VAR_ID(self):
            return self.getToken(ChinesePyPlusParser.TKN_VAR_ID, 0)

        def TKN_ASSIGN(self):
            return self.getToken(ChinesePyPlusParser.TKN_ASSIGN, 0)

        def value(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ValueContext,0)


        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_varAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarAssignment" ):
                listener.enterVarAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarAssignment" ):
                listener.exitVarAssignment(self)




    def varAssignment(self):

        localctx = ChinesePyPlusParser.VarAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(ChinesePyPlusParser.TKN_VAR_ID)
            self.state = 73
            self.match(ChinesePyPlusParser.TKN_ASSIGN)
            self.state = 74
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_FUNCTION(self):
            return self.getToken(ChinesePyPlusParser.TKN_FUNCTION, 0)

        def TKN_VAR_ID(self):
            return self.getToken(ChinesePyPlusParser.TKN_VAR_ID, 0)

        def TKN_LBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_LBRACKET, 0)

        def fullArgList(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.FullArgListContext,0)


        def TKN_RBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_RBRACKET, 0)

        def TKN_LFUNBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_LFUNBRACKET, 0)

        def code(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.CodeContext,0)


        def TKN_RETURN(self):
            return self.getToken(ChinesePyPlusParser.TKN_RETURN, 0)

        def value(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ValueContext,0)


        def TKN_RFUNBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_RFUNBRACKET, 0)

        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = ChinesePyPlusParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(ChinesePyPlusParser.TKN_FUNCTION)
            self.state = 77
            self.match(ChinesePyPlusParser.TKN_VAR_ID)
            self.state = 78
            self.match(ChinesePyPlusParser.TKN_LBRACKET)
            self.state = 79
            self.fullArgList()
            self.state = 80
            self.match(ChinesePyPlusParser.TKN_RBRACKET)
            self.state = 81
            self.match(ChinesePyPlusParser.TKN_LFUNBRACKET)
            self.state = 82
            self.code()
            self.state = 83
            self.match(ChinesePyPlusParser.TKN_RETURN)
            self.state = 84
            self.value()
            self.state = 85
            self.match(ChinesePyPlusParser.TKN_RFUNBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_VAR_ID(self):
            return self.getToken(ChinesePyPlusParser.TKN_VAR_ID, 0)

        def TKN_LBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_LBRACKET, 0)

        def fullValueList(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.FullValueListContext,0)


        def TKN_RBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_RBRACKET, 0)

        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)




    def functionCall(self):

        localctx = ChinesePyPlusParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(ChinesePyPlusParser.TKN_VAR_ID)
            self.state = 88
            self.match(ChinesePyPlusParser.TKN_LBRACKET)
            self.state = 89
            self.fullValueList()
            self.state = 90
            self.match(ChinesePyPlusParser.TKN_RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.VarDeclarationContext,0)


        def varAssignment(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.VarAssignmentContext,0)


        def printExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.PrintExpressionContext,0)


        def forLoopExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ForLoopExpressionContext,0)


        def whileLoopExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.WhileLoopExpressionContext,0)


        def conditionalExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ConditionalExpressionContext,0)


        def TKN_END(self):
            return self.getToken(ChinesePyPlusParser.TKN_END, 0)

        def functionCall(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.FunctionCallContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.FunctionDeclarationContext,0)


        def TKN_RETURN(self):
            return self.getToken(ChinesePyPlusParser.TKN_RETURN, 0)

        def value(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ValueContext,0)


        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = ChinesePyPlusParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.varDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.varAssignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.printExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.forLoopExpression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.whileLoopExpression()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.conditionalExpression()
                self.state = 98
                self.match(ChinesePyPlusParser.TKN_END)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 100
                self.functionCall()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 101
                self.functionDeclaration()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 102
                self.match(ChinesePyPlusParser.TKN_RETURN)
                self.state = 103
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.StringExpressionContext,0)


        def booleanExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.BooleanExpressionContext,0)


        def arithmeticExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ArithmeticExpressionContext,0)


        def listExpression(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.ListExpressionContext,0)


        def TKN_VAR_ID(self):
            return self.getToken(ChinesePyPlusParser.TKN_VAR_ID, 0)

        def functionCall(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = ChinesePyPlusParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.stringExpression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.booleanExpression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.arithmeticExpression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.listExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.match(ChinesePyPlusParser.TKN_VAR_ID)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 111
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_STRING_VAL(self):
            return self.getToken(ChinesePyPlusParser.TKN_STRING_VAL, 0)

        def TKN_VAR_ID(self):
            return self.getToken(ChinesePyPlusParser.TKN_VAR_ID, 0)

        def TKN_LBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_LBRACKET, 0)

        def stringExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChinesePyPlusParser.StringExpressionContext)
            else:
                return self.getTypedRuleContext(ChinesePyPlusParser.StringExpressionContext,i)


        def TKN_RBRACKET(self):
            return self.getToken(ChinesePyPlusParser.TKN_RBRACKET, 0)

        def functionCall(self):
            return self.getTypedRuleContext(ChinesePyPlusParser.FunctionCallContext,0)


        def TKN_CONCAT(self):
            return self.getToken(ChinesePyPlusParser.TKN_CONCAT, 0)

        def getRuleIndex(self):
            return ChinesePyPlusParser.RULE_stringExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpression" ):
                listener.enterStringExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpression" ):
                listener.exitStringExpression(self)



    def stringExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ChinesePyPlusParser.StringExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_stringExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 115
                self.match(ChinesePyPlusParser.TKN_STRING_VAL)
                pass

            elif la_ == 2:
                self.state = 116
                self.match(ChinesePyPlusParser.TKN_VAR_ID)
                pass

            elif la_ == 3:
                self.state = 117
                self.match(ChinesePyPlusParser.TKN_LBRACKET)
                self.state = 118
                self.stringExpression(0)
                self.state = 119
                self.match(ChinesePyPlusParser.TKN_RBRACKET)
                pass

            elif la_ == 4:
                self.state = 121
                self.functionCall()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ChinesePyPlusParser.StringExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_stringExpression)
                    self.state = 124
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 125
                    self.match(ChinesePyPlusParser.TKN_CONCAT)
                    self.state = 126
                    self.stringExpression(6) 
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
